crates/apollo-compiler/test_data/diagnostics/0126_defer_label_variable.txt
Error: `@defer` label argument must be a static String, not a variable
   ╭─[ 0126_defer_label_variable.graphql:3:27 ]
   │
 3 │         ... @defer(label: $label) {
   │                           ───┬──  
   │                              ╰──── variable used as label here
───╯

